# crabtime

./: .gitignore  ARCHITECTURE.md  ENHANCED_PROMPT.md  LICENSE  Makefile  PRD.md  README.md  todo.md
.github/workflows/: release.yml
CrabTime/: Package.swift  build_output.txt  fix.py  fix2.py  fix3.py  fix_ai_session_message.py  fix_app.py  fix_brace.py  fix_color.py  fix_diag.py  fix_final.py  fix_session_log.py  fix_workspace.py  functions2.rs  match.py  test_selection.swift  test_swift.swift
CrabTime/Sources/CrabTime/: AppBrand.swift  CrabTimeApp.swift  WorkspaceStore.swift
CrabTime/Tests/CrabTimeTests/: AISettingsStoreTests.swift  CargoRunnerTests.swift  ExercismCLITests.swift  RepositoryClonerTests.swift  RustlingsWorkspaceScaffolderTests.swift  SourcePresentationBuilderTests.swift  WorkspaceImporterTests.swift  WorkspaceStoreTests.swift
RustGoblin/: Package.swift  variables.rs  variables2.rs
RustGoblin/Sources/RustGoblin/: RustGoblinApp.swift  WorkspaceStore.swift
RustGoblin/Tests/RustGoblinTests/: AISettingsStoreTests.swift  CargoRunnerTests.swift  ExercismCLITests.swift  RepositoryClonerTests.swift  SourcePresentationBuilderTests.swift  WorkspaceImporterTests.swift  WorkspaceStoreTests.swift
tests/fixtures/rustlings_like/: Cargo.toml  README.md
tests/fixtures/rustlings_scaffold/: Cargo.toml  info.toml
tests/fixtures/rustlings_scaffold/exercises/: lru_cache.rs
tests/fixtures/rustlings_scaffold/solutions/: lru_cache.rs
tests/fixtures/sample_challenge/: README.md  (+3 more)
tools/: codex_acp_adapter.py  codex_acp_adapter.swift  gemini_acp_probe.py
(+173 files in other folders)
