# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "lru_cache", path = "exercises/lru_cache.rs" },
  { name = "lru_cache_sol", path = "solutions/lru_cache.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
